--- a/House_Price_Prediction_using_ANN.ipynb
+++ b/House_Price_Prediction_using_ANN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNXggzkalpjAvbIFvJbKiN0",
+      "authorship_tag": "ABX9TyOP3xg8xhpAYRrgoVcRm9Mx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 358,
+      "execution_count": null,
       "metadata": {
         "id": "YdgwQHWsf_ug"
       },
@@ -66,7 +66,7 @@
         "id": "gm71QBdyh2Tx",
         "outputId": "65f7f80b-c202-43fb-d729-0c7aed516a05"
       },
-      "execution_count": 359,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -415,7 +415,7 @@
         "id": "FpnyED4_iSOw",
         "outputId": "72283f6d-31d9-4810-bea7-98aee665e41a"
       },
-      "execution_count": 360,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -450,7 +450,7 @@
         "id": "-bjphnvDiiyo",
         "outputId": "189c7298-7b55-47a4-9816-866113447007"
       },
-      "execution_count": 361,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -478,7 +478,7 @@
         "id": "vm4MbDpfjFLS",
         "outputId": "a0c0754b-3a61-4e45-a350-53d6b18b7f57"
       },
-      "execution_count": 362,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -506,7 +506,7 @@
         "id": "rEfm6Nh0jM9w",
         "outputId": "7911ff7a-eafd-41d4-9c0e-66f801a7d16e"
       },
-      "execution_count": 363,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -590,7 +590,7 @@
       "metadata": {
         "id": "xopVaF_plSnr"
       },
-      "execution_count": 364,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -616,7 +616,7 @@
         "id": "noIdWOnojfDg",
         "outputId": "3595fbe5-694e-4cf3-b91e-97ffe65b8cea"
       },
-      "execution_count": 365,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -691,7 +691,7 @@
       "metadata": {
         "id": "_YgeMEyrllXT"
       },
-      "execution_count": 366,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -707,7 +707,7 @@
         "id": "us5dpO5Bl6fZ",
         "outputId": "b52a9deb-d53f-42ad-dbb6-0b0ca6ce97e5"
       },
-      "execution_count": 367,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1025,7 +1025,7 @@
         "id": "2SyyG21Ql-0h",
         "outputId": "3ce5c98a-eecb-43ed-93a8-3d71faae9413"
       },
-      "execution_count": 368,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1055,7 +1055,7 @@
         "id": "jeAAg6i3mSKJ",
         "outputId": "01cdc997-07cc-47bd-8a0b-c9ff68d5d9d1"
       },
-      "execution_count": 369,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1083,7 +1083,7 @@
         "id": "LvFbC_GpmfDp",
         "outputId": "b3db9cd2-a57f-4b11-c89b-b3a7cdfad0b1"
       },
-      "execution_count": 370,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1154,7 +1154,7 @@
         "id": "A_4d1qcim0GR",
         "outputId": "27e67991-49ee-4b62-c6f1-51da4e904fec"
       },
-      "execution_count": 371,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1199,7 +1199,7 @@
         "id": "AH1_sUXWoh5C",
         "outputId": "df9ef377-c706-4dec-de59-c41791bbc506"
       },
-      "execution_count": 372,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1287,7 +1287,7 @@
         "id": "5dQ-oH6eni3C",
         "outputId": "1dac7485-7df6-45d8-d915-919b1c994f41"
       },
-      "execution_count": 373,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1395,7 +1395,7 @@
       "metadata": {
         "id": "PlctQyBFBpzA"
       },
-      "execution_count": 374,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1409,7 +1409,7 @@
       "metadata": {
         "id": "p-p6t-siBsxS"
       },
-      "execution_count": 375,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1435,7 +1435,7 @@
         "id": "JJX8oqqdB_-0",
         "outputId": "df608aee-515d-46c4-ba18-7f4479a63a81"
       },
-      "execution_count": 376,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1680,7 +1680,7 @@
         "id": "RhUqmjWdqW2B",
         "outputId": "4755e094-2bb6-4fe4-a755-ad11be3e5cbb"
       },
-      "execution_count": 377,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1731,7 +1731,7 @@
         "id": "xl3DUjU1C7TP",
         "outputId": "c81df017-a020-42ad-8117-47f9f13ed6a9"
       },
-      "execution_count": 378,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1758,7 +1758,7 @@
         "id": "2XEjxYmADIcQ",
         "outputId": "0f6a7552-21e7-4932-fa1c-7f2e3bdfe4de"
       },
-      "execution_count": 379,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1869,7 +1869,7 @@
       "metadata": {
         "id": "VZbmdDad3ZNm"
       },
-      "execution_count": 380,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1884,7 +1884,7 @@
         "id": "2On5aNVJ3vNS",
         "outputId": "0ecc20c7-236b-4e9c-8644-7f1539c7c9c7"
       },
-      "execution_count": 381,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1925,7 +1925,7 @@
       "metadata": {
         "id": "yg9k7lFiCWuu"
       },
-      "execution_count": 382,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1940,7 +1940,7 @@
       "metadata": {
         "id": "ynRQ2kofCbv1"
       },
-      "execution_count": 383,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1960,7 +1960,7 @@
         "id": "C1P9a2DiCgY9",
         "outputId": "a89d7e0e-6ccc-4d60-bcfc-7c96983ec513"
       },
-      "execution_count": 384,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1995,7 +1995,7 @@
         "id": "PCjSdDkz8u_8",
         "outputId": "f41a2989-21f5-433a-bdcd-ce3c5c636634"
       },
-      "execution_count": 385,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2016,7 +2016,7 @@
       "metadata": {
         "id": "3fCKYcJWTU3N"
       },
-      "execution_count": 388,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2063,7 +2063,7 @@
         "id": "bhV3YinGSuoe",
         "outputId": "2c244132-3fbe-4c73-99dd-b8349bf99dc0"
       },
-      "execution_count": 389,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2310,7 +2310,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 390,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2386,7 +2386,7 @@
           "height": 507
         }
       },
-      "execution_count": 392,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2922,7 +2922,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 419,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2942,7 +2942,7 @@
       "metadata": {
         "id": "dhfocouCnkDn"
       },
-      "execution_count": 431,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2956,12 +2956,14 @@
       "metadata": {
         "id": "fxMpvhACm734"
       },
-      "execution_count": 422,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# Create the Streamlit app code\n",
+        "app_code = \"\"\"\n",
         "import streamlit as st\n",
         "import numpy as np\n",
         "import mlflow.pyfunc\n",
@@ -2988,55 +2990,20 @@
         "        prediction = model.predict(input_data)\n",
         "        st.success(f\"🏠 Estimated House Price: **${prediction[0]:,.2f}**\")\n",
         "    except Exception as e:\n",
-        "        st.error(f\"⚠️ Error during prediction: {e}\")\n"
+        "        st.error(f\"⚠️ Error during prediction: {e}\")\n",
+        "\"\"\"\n",
+        "\n",
+        "# Save the code to app.py\n",
+        "with open(\"/content/app.py\", \"w\") as f:\n",
+        "    f.write(app_code)\n",
+        "\n",
+        "print(\"Streamlit app code saved as app.py\")\n"
       ],
       "metadata": {
-        "id": "2uuyma35l-Af",
-        "outputId": "4cb8dba2-2df5-4aed-afdf-a2c2fcfbbdbb",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "2uuyma35l-Af"
       },
-      "execution_count": 432,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "2025-02-26 19:11:08.748 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.751 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.756 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.759 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.761 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.762 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.763 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.764 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.765 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.766 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.766 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.767 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.769 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.769 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.770 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.771 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.774 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.775 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.776 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.783 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.786 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.788 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.789 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.790 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.791 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.792 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.794 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.799 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.800 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.801 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n",
-            "2025-02-26 19:11:08.802 Thread 'MainThread': missing ScriptRunContext! This warning can be ignored when running in bare mode.\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -3058,7 +3025,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 434,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
