--- a/House_Price_Prediction_using_ANN.ipynb
+++ b/House_Price_Prediction_using_ANN.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOP3xg8xhpAYRrgoVcRm9Mx",
+      "authorship_tag": "ABX9TyP76fD71X3EHbuoHPr81G6w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3011,12 +3011,15 @@
         "from pyngrok import ngrok\n",
         "import os\n",
         "\n",
-        "# Start Streamlit in the background\n",
-        "os.system(\"streamlit run app.py &\")\n",
+        "# Define the Streamlit script path\n",
+        "streamlit_script = \"/content/app.py\"  # Ensure this points to your app.py file\n",
         "\n",
-        "# Create a public link using ngrok\n",
-        "url = ngrok.connect(8501).public_url\n",
-        "print(f\"🌍 Web App Running at: {url}\")\n"
+        "# Set up a tunnel to the Streamlit port 8501\n",
+        "public_url = ngrok.connect(port='8501')\n",
+        "print(f\"Streamlit app is live at {public_url}\")\n",
+        "\n",
+        "# Run Streamlit in the background (this runs the Streamlit app)\n",
+        "os.system(f\"streamlit run {streamlit_script} &\")\n"
       ],
       "metadata": {
         "id": "uOFy71vZoJhu",
